primitives/npos-elections/solution-type/tests/ui/fail/swap_voter_target.stderr
error: Expected `VoterIndex`
 --> $DIR/swap_voter_target.rs:4:2
  |
4 |     TargetIndex = u16,
  |     ^^^^^^^^^^^
